feat(reflect): java lambda expressions